--- a/css/styles.css
+++ b/css/styles.css
@@ -1,42 +1,48 @@
 header {
     text-align: center;
+    height: 70px;
 }
-
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #0A142C;
-    margin: 0;
-    padding: 0;
+    background-color: #0A142C !important;
+    margin: 0 !important;
+    padding: 0 !important;
 }
+
+ul {
+    list-style: none !important;
+}
+
 .container {
-    max-width: 500px;
-    margin: 0 auto;
-    padding: 20px;
-    border-radius: 5px;
+    max-width: 500px !important;
+    margin: 0 auto !important;
+    padding: 20px !important;
+    border-radius: 5px !important;
 }
 
 label {
-    display: block;
-    margin-bottom: 5px;
-    color: #f5f5f5;    
+    display: block !important;
+    margin-bottom: 0px !important;
+    color: #f5f5f5 !important; 
 }
 
 input[type="text"],
 input[type="password"],
 input[type="email"],
 select {
-    background-color:#445180;
-    color: #f5f5f5;
-    width: 97%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #0A142C;
-    border-radius: 5px;
+    background-color:#445180 !important;
+    color: #f5f5f5 !important;
+    width: 300% !important;
+    height: 30px !important;
+    padding: 10px !important;
+    margin-bottom: 10px !important;
+    border: 1px solid #0A142C !important;
+    border-radius: 5px !important;
 }
 
 input[type="checkbox"] {
-    margin-right: 5px;
+    margin-right: 5px !important;
 }
 
 button {
