--- a/css/styles.css
+++ b/css/styles.css
@@ -13,63 +13,71 @@
     
 }
 body {
-    background-color: #0a132d !important;
+    background: linear-gradient(to bottom, #0a132d, #000000) !important;
     margin: 0;
     font-family: montserrat;
     height: 100vh;
 }
 
 
-.formulario {
+.contenedor {
 
     position: absolute;
     top:50%;
     left: 50%;
     transform: translate(-50%, -50%) ;
-    background: white;
+    /*background: linear-gradient(to bottom, #0a132d, #000000);*/
     width: 300px;
     border-radius: 10px;
+   //* border: 2px solid rgb(37, 38, 39); /* Agregar borde blanco */
+
 }
 
-.formulario h1{
+.contenedor h1{
+    color: white;
     text-align: center;
     padding: 0 0 20px 0;
     margin: 10px;
     border-bottom:1px solid silver ;
 }
 
-.formulario form{
+.contenedor div{
     padding: 0 40px;
     box-sizing: border-box;
 }
 form .mb-3{
     position: relative;
-    border-bottom: 2px solid rgb(252, 249, 249);
     margin: 30px 0;
+    color: white;
 }
 .mb-3 input{
     width: 100%;
+
 }
 button[type="submit"] {
-    width: 100%;
-    height: 50px;
+    width: 150px; /* Establece el ancho deseado */
+    height: 40px; /* Establece la altura deseada */
+    margin: 0 auto; /* Centra el botón horizontalmente */
+    display: block; /* Convierte el botón en un bloque para centrarlo */
     border: 1px solid;
     background-color: rgb(20, 95, 156); 
-    border-radius: 25px;
+    border-radius: 20px; /* Ajusta el radio del borde */
     color: white; /* Cambia el color del texto a blanco */
     outline: none;
+    
 }
 
 button[type="submit"]:hover {
-      border-color: rgb(20, 95, 156);
+      border-color: rgb(20, 54, 156);
       transition: .5s;  
+
 }
 
 .recordar{
     margin: 30px 0;
     text-align: center;
     font-size: 16px;
-    color: black;
+    color: rgb(255, 255, 255);
 }
 
 .registrarse{
@@ -80,7 +88,7 @@ button[type="submit"]:hover {
 }
 
 .registrarse a{
-    color: blue;
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 
@@ -88,3 +96,7 @@ button[type="submit"]:hover {
     text-decoration: underline;
 }
 
+.error {
+    color: red;
+    font-size: 14px;
+}
